# PlutoSDR_PKuat

./: README.md  output.iq
BandaS/CodigosC_PruebasBasicas/: HolaMundo  HolaMundo.c  HolaMundoNuevoArchivo  Prueba1.txt
BandaS/EnvioRepecionPlutoSDR/: plutosend.c
BandaS/EnvioRepecionPlutoSDRCodigoC/: plutorec
BandaS/Modem/: PruebaTransmisorImagenes_Liz.grc  PruebaTransmisorImagenes_Liz.py  TransmisorFM.grc  TransmisorFM.py
BandaUHF/: ReceptorFM.grc  ReceptorFM.py
BandaUHF/CodigosADCS/: ADCSDinamics.h  CONST.h  DatosC.csv  DatosKalman.txt  DatosSensoresMatlab.csv  EKF.h  SatData.h  bdot  kalman  serial.cpp
BandaUHF/PruebaConocerUARTcodigo/: PruebaUART.cpp  PruebaUART_USBOTGPluto
BandaUHF/PruebaInicializarMCPdesdePlutoSDR/: InicializarMCP.cpp  Makefile  hid.c
BandaUHF/PruebaUSBotg/: EnviandoDatosSerial.cpp
CP2112/: BMP180_CP2112  BMP180_CP2112.c  BMP180_CP2112.cpp  Makefile  SLABCP2112.h  silabs_defs.h
CP2112/USBXpressHostSDK/: ReleaseNotes.txt
CP2112/slabhidtosmbus/: Makefile
EnvioRepecionPlutoSDR/: ResultadosEnvio2.txt
IntercomunicacionComputadora/CodigosADCS/: ADCSMath.h  ADCSOPMode  BDot.cpp  DatosInercialesMatlab.csv  GPS.cpp  InertialData.h  Kalman.cpp  Orbit.h  ReadADCS.h  Sgp4.h  ejecutable  gps  serial  seriallinux.cpp
PlutoSDR/Iniciando/GNUradioTutorial/GeneradorFunciones/: CMakeLists.txt  GeneradorFunciones.cpp  GeneradorFunciones.hpp
REVISAR/: Envio1PlutoSDR  FileTxRx.grc  Prueba.grc  Prueba.py  RadioFM.grc  RadioFM.py  Recibir1PlutoSDR.c  fmradio_pluto.grc  pluto_stream  plutorecg  plutosend  top_block.py
(+358 files in other folders)
